bk_ida/gccida/c1/print_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_reg/src/i386.c:6170:16: error: use of undeclared identifier 'off_63A0C3'
fprintf( file, off_63A0C3, ( unsigned int)( rtint - 29)); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_reg/src/obj/i386.o] Error 1
